# YahooFinanceDataLake

./: .env.example  .gitignore  Dockerfile.airflow  README.md  docker-compose.yml  pyproject.toml
airflow/dags/: yahoo_finance_pipeline.py
config/: settings.py
data/usage/predictions/: arima_predictions.parquet
data/usage/stock_analysis/enriched_stocks.parquet/: .part-00000-14124a21-68c9-4fea-945f-f92b72c66b26-c000.snappy.parquet.crc  .part-00000-166ba456-5faa-4b09-a24f-b0a5221a1d2c-c000.snappy.parquet.crc  .part-00000-1b9a1cbf-bc3d-4031-93be-d716df7bf97e-c000.snappy.parquet.crc  .part-00000-1c140765-f6c0-4d8f-93e2-c9d343541d27-c000.snappy.parquet.crc  .part-00000-6eb558cf-8843-403c-84a5-881f15004485-c000.snappy.parquet.crc  .part-00000-861d1630-ffdb-4726-ba96-bfd6717797a9-c000.snappy.parquet.crc  .part-00000-87c9124f-f47d-4c75-aece-b007e575bff7-c000.snappy.parquet.crc  .part-00000-8bddf29f-89d7-4a88-a511-7b4856b13275-c000.snappy.parquet.crc  .part-00000-953fc467-8489-405a-a365-8f81bc59efed-c000.snappy.parquet.crc  .part-00000-b23d2cb6-71af-4fb3-ba38-de0cd4e90929-c000.snappy.parquet.crc  (+46 more)
docs/: DOCUMENTATION_TECHNIQUE.md  medium_article.md  rapport.tex
kibana/: export (1).ndjson  kibana_saved_objects.ndjson
kibana/exports/: export.ndjson
scripts/: init_kibana.sh  kibana_export.py
scripts/combination/: combine_sources.py
scripts/formatting/: format_to_parquet.py
scripts/indexing/: to_elasticsearch.py
scripts/ingestion/: finnhub_news.py  news.py  yahoo_stocks.py
scripts/prediction/: arima_forecast.py
(+122 files in other folders)
